[package]
name = "ewin-ctx_menu"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
dyn-clone.workspace = true
downcast.workspace = true
parking_lot.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-view.workspace = true
ewin-key.workspace = true
ewin-job.workspace = true
ewin-utils.workspace = true
ewin-plugin.workspace = true
