[package]
name = "ewin-dialog"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot.workspace = true
crossterm.workspace = true
once_cell.workspace = true
num-format.workspace = true
dyn-clone.workspace = true
downcast.workspace = true
chrono.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-key.workspace = true
ewin-view.workspace = true
ewin-utils.workspace = true
ewin-state.workspace = true
