[package]
name = "ewin-editor"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ropey.workspace = true
syntect.workspace = true
unicode-width.workspace = true
unicode-jp.workspace = true
crossterm.workspace = true
byteorder.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-key.workspace = true
ewin-view.workspace = true
ewin-utils.workspace = true
ewin-job.workspace = true
ewin-state.workspace = true
ewin-menu_bar.workspace = true
ewin-ctx_menu.workspace = true
ewin-prom.workspace = true
ewin-msg_bar.workspace = true
ewin-help.workspace = true
ewin-file_bar.workspace = true
ewin-side_bar.workspace = true
ewin-activity_bar.workspace = true
