[package]
name = "ewin-help"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.5.2"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
crossterm  = {version ="0.24.0", features = ["event-stream"]} 

ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-view = {version = "0.0.2", path = "../../base/ewin-view" }
ewin-utils = {version = "0.0.2", path = "../../base/ewin-utils" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-state = {version = "0.0.2", path = "../../ewin-state" }
