[package]
name = "ewin-menu_bar"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
indexmap.workspace = true
once_cell.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-key.workspace = true
ewin-view.workspace = true
ewin-utils.workspace = true
ewin-job.workspace = true
ewin-state.workspace = true
ewin-dialog.workspace = true
