[package]
name = "ewin-menulist"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
indexmap="1.8.1"
serde_json = { version = "1.0.81"}

ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-state = {version = "0.0.2", path = "../../ewin-state" }
ewin-view = {version = "0.0.2", path = "../../ewin-view" }
