[package]
name = "ewin-menulist"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
indexmap="1.8.1"
serde_json = { version = "1.0.81"}
once_cell = "1.5.2"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }

ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-view = {version = "0.0.2", path = "../../base/ewin-view" }
ewin-utils = {version = "0.0.2", path = "../../base/ewin-utils" }
ewin-job = {version = "0.0.2", path = "../../base/ewin-job" }
ewin-state = {version = "0.0.2", path = "../../ewin-state" }
ewin-dialog = {version = "0.0.2", path = "../../parts/ewin-dialog" }
