[package]
name = "ewin-prom"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
directories = "4.0.1"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
chrono= "0.4.19"
dyn-clone = "1.0.5"
downcast = "0.11.0"
indexmap = "1.8.1"
grep = "0.2.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
ignore = "0.4.18"
globset = "0.4.8"
regex = "1.6.0"


ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-view = {version = "0.0.2", path = "../../base/ewin-view" }
ewin-utils = {version = "0.0.2", path = "../../base/ewin-utils" }
ewin-job = {version = "0.0.2", path = "../../base/ewin-job" }
ewin-state = {version = "0.0.2", path = "../../ewin-state" }
ewin-editor = {version = "0.0.2", path = "../ewin-editor" }
ewin-menulist = {version = "0.0.2", path = "../ewin-menulist" }
