[package]
name = "ewin-prom"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
downcast.workspace = true
directories.workspace = true
dyn-clone.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
indexmap.workspace = true
grep.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
globset.workspace = true
regex.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-view.workspace = true
ewin-utils.workspace = true
ewin-job.workspace = true
ewin-key.workspace = true
ewin-state.workspace = true
ewin-menu_bar.workspace = true
ewin-help.workspace = true
ewin-side_bar.workspace = true
ewin-activity_bar.workspace = true
