[package]
name = "ewin-side_bar"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.5.2"
crossterm  = {version ="0.25.0", features = ["event-stream"]} 
parking_lot = "0.12.1"
directories = "4.0.1"
dyn-clone = "1.0.5"
downcast = "0.11.0"

ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-view = {version = "0.0.2", path = "../../base/ewin-view" }
ewin-utils = {version = "0.0.2", path = "../../base/ewin-utils" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-job = {version = "0.0.2", path = "../../base/ewin-job" }
ewin-state = {version = "0.0.2", path = "../../ewin-state" }
ewin-menu_bar = {version = "0.0.2", path = "../../parts/ewin-menu_bar" }
