[package]
name = "ewin-side_bar"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
downcast.workspace = true
directories.workspace = true
dyn-clone.workspace = true
unicode-width.workspace = true
serde.workspace = true
serde_json.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-view.workspace = true
ewin-utils.workspace = true
ewin-job.workspace = true
ewin-key.workspace = true
ewin-state.workspace = true
ewin-menu_bar.workspace = true
ewin-activity_bar.workspace = true

